--- a/D3_data_journalism/assets/css/style.css
+++ b/D3_data_journalism/assets/css/style.css
@@ -29,3 +29,11 @@ body {
   margin: 0;
   font-size: 16px;
 }
+
+#circles {
+  /* position: relative;
+  display: inline-block; */
+  font-size: 5px;
+  /* text-align: center; */
+  color: white;
+}
